<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.list.ListActivity">

    <TextView
        android:id="@+id/createTaskTitle"
        style="@style/titleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/taskTitleMsg"
        style="@style/subtitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTaskTitle" />


    <EditText
        android:id="@+id/editTextNoteTitle"
        style="@style/bodyStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/task_title_hint"
        android:inputType="textCapWords"
        android:text=""

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleMsg" />

    <TextView
        android:id="@+id/taskDescrpMsg"
        style="@style/subtitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNoteTitle" />


    <EditText
        android:id="@+id/editTextNoteDescrp"
        style="@style/bodyStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:hint="@string/task_description_hint"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDescrpMsg"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/taskDate"
        style="@style/bodyStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:text="DATE"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNoteDescrp"
        android:enabled="false"/>


    <RadioGroup
        android:id="@+id/radioStatus"
        style="@style/bodyStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDate">

        <RadioButton
            android:id="@+id/radioTodo"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#2196F3"
            android:checked="true"
            android:text="@string/radio_to_do" />

        <RadioButton
            android:id="@+id/radioInProcess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#2196F3"
            android:enabled="false"
            android:text="@string/radio_in_process" />

        <RadioButton
            android:id="@+id/radioFinished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#2196F3"
            android:text="@string/radio_finished"
            android:enabled="false"/>

        <RadioButton
            android:id="@+id/radioFailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#2196F3"
            android:text="@string/radio_failed"
            android:enabled="false"/>

        <RadioButton
            android:id="@+id/radioWaiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#2196F3"
            android:text="@string/radio_waiting"
            android:enabled="false"/>
    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioStatus" />




</androidx.constraintlayout.widget.ConstraintLayout>